# eks-ec2-cdk-react-dns-demo

./: .gitignore  Makefile  README.md  app.py  aws-auth-patch.yaml  cdk.context.json  main.py  pyproject.toml  requirements.txt  requirements_frozen.txt  trust-policy.json
logs/: baseline.txt  lr0_0005_seed0.txt  lr_0_0005.txt  seed1.txt  seed2.txt  seed3.txt  seed4.txt  test_run.txt
scripts/: brutal-force-cleanup.zsh  check-cleanup.zsh  check_eks_network.sh  cleanup_vpc_force.py  delete_subnet_force.py  delete_vpn.zsh  force-destroy.zsh  progress-watch.zsh  reinstall_cert_manager.zsh  rollback-watch.zsh
stacks/: __init__.py  eks_app_stack.py  eks_cluster_stack.py  eks_dns_stack.py  eks_react_app_stack.py  version.py
